Fixed background image for products on mobile browsers
Apparently mobile webkit browsers doesn't handle single-line background
specification correctly. Especially the position statement (3px 1px /) and
the linear-gradient specification wreak havoc. Hence, single-line
specification has been broken down in individual statements and the
background-color has been set to #c3c3c3 instead of a gradient.

--- a/app/assets/stylesheets/pages/root.sass
+++ b/app/assets/stylesheets/pages/root.sass
@@ -18,9 +18,13 @@ body#pages_root
     padding: 18px 10px
 
     .img-holder
-      @include background(image-url('pages/root/app_buttons.png') 3px 1px / 35px 8px no-repeat, linear-gradient(center left, #C3C3C3, #BBB))
       @include box-shadow(rgba(white, 0.3) 0 0 4px 3px inset)
       @include border-radius(4px)
+      background-image: image-url('pages/root/app_buttons.png')
+      background-position: 3px 2px
+      background-size: 35px 8px
+      background-repeat: no-repeat
+      background-color: #C3C3C3
       width: 100%
       max-width: 330px
       padding-top: 11px
